add: FAQ route
